# JM-lite

./: README.md  meson.build
app/ldecod/inc/: defines.h  h264decoder.h
app/lencod/src/: lencod.c
lcommon/: meson.build
lcommon/inc/: config_common.h  frame.h  img_io.h  io_video.h  memalloc.h  report.h  typedefs.h  types.h  vui_params.h
lcommon/src/: config_common.c  img_io.c  memalloc.c  win32.c
ldecod/: meson.build
ldecod/inc/: defines.h  global.h
ldecod/src/: decoder_test.c  ldecod.c
lencod/: meson.build
lencod/inc/: configfile.h  conformance.h  defines.h  enc_statistics.h  filehandle.h  global.h  ifunctions.h  mbuffer.h  mp_epzs_common.h  params.h
lencod/src/: configfile.c  conformance.c  filehandle.c  lencod.c  me_epzs_common.c  report.c
lib/lcommon/: meson.build
