lcommon_inc = include_directories('inc')
lcommon_files = files([
  'inc/config_common.h',
  'inc/frame.h',
  'inc/img_io.h',
  'inc/io_video.h',
  'inc/memalloc.h',
  'inc/report.h',
  'inc/typedefs.h',
  'inc/types.h',
  'inc/vui_params.h',
  'inc/win32.h',
  'src/win32.c',
  'src/config_common.c',
  'src/memalloc.c',
  'src/img_io.c'
])

