executable('lencod', [
  'inc/configfile.h',
  'inc/filehandle.h',
  'inc/image.h',
  'inc/me_epzs_common.h',
  'inc/conformance.h',
  'src/lencod.c',
  'src/configfile.c',
  'src/filehandle.c',
  'src/image.c',
  'src/report.c',
  'src/me_epzs_common.c',
  'src/conformance.c'
  ], lcommon_files, include_directories: ['inc', lcommon_inc])